Fixed an alignment issue

--- a/uil/core/static/uil.core/css/uu-style.css
+++ b/uil/core/static/uil.core/css/uu-style.css
@@ -78,6 +78,7 @@ label {
 .titletext a, .titletext a:hover {
     color: #094D8E;
     text-decoration: none;
+    padding: 0 15px;
 }
 
 .loginheader {
